--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="mat-app-background">
   <app-root></app-root>
 </body>
 </html>
